# signalchord

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  TODOS.md  docker-compose.override.yml  docker-compose.projector.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
e2e/: package.json  (+3 more)
services/: go.mod  go.sum  pyproject.toml  requirements.txt
services/alert-projector/: README.md  worker.py
services/claim-intelligence/: README.md  engine.py  test_claim_engine.py  worker.py
services/document-fetcher/: README.md  policy.go  policy_test.go
services/entity-resolution/: README.md  resolver.py  test_resolver.py  worker.py
services/feed-collector/: README.md  main.go  main_test.go
services/graph-analytics/: README.md  app.py  worker.py
services/graph-projector/: README.md  test_worker.py  worker.py
services/graph-query/: README.md  app.py  test_app.py
services/nlp-pipeline/: README.md  app.py  test_app.py  worker.py
services/notification-worker/: README.md  test_worker.py  worker.py
services/python_common/: models.py  production_config.py  test_production_config.py
services/realtime-gateway/: README.md  main.go  main_test.go
services/search-projector/: README.md  test_worker.py  worker.py
services/stream-normalizer/: README.md  normalize.go  normalize_test.go
services/velato-engine/: README.md  app.py  engine.py  standard_library.py  test_api.py  test_engine.py  test_showcase_programs.py  test_standard_library.py  worker.py
(+412 files in other folders)
