[project]
name = "signalchord-services"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.12",
  "uvicorn>=0.34.3",
  "pydantic>=2.11.5",
  "confluent-kafka>=2.10.0",
  "neo4j>=6.2.0",
  "mido>=1.3.3",
  "boto3>=1.38.36",
  "httpx>=0.28.1",
  "opensearch-py>=2.8.0"
]
[project.optional-dependencies]
dev = ["pytest>=8.4.0", "mypy>=1.16.0", "ruff>=0.11.13", "httpx>=0.28.1"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
